--- a/main.html
+++ b/main.html
@@ -7,7 +7,37 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<form method="POST">
+        <label for="name">Name</label>
+        <input type="text" id="name" required>
+
+        <label for="email">Email</label>
+        <input type="email" id="email" required>
+
+        <label>Male</label>
+        <input type="radio" name="gender" required>
+
+        <label>Female</label>
+        <input type="radio" name="gender" required>
+
+        <label for="cars">Car Brands</label>
+        <select id="cars">
+            <option value="bmw">BMW</option>
+            <option value="audi">Audi</option>
+            <option value="mercedez">Mercedez</option>
+        </select>
+
+        <label for="carage">Car Age</label>
+        <input type="number" name="" id="carage" required>
+
+        <label for="dop">Date of Purchase (dop)</label>
+        <input type="date" id="dop" required>
+
+        <label for="password">Password</label>
+        <input type="password" id="password" required>
+
+        <button type="submit">Submit</button>
+    </form>
     <script type="text/javascript" src="./script.js">
 </script>
 
